--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.76428f03.js"></script>
+    <title>the click</title>
+    <script type="module" crossorigin src="/assets/index.1251607b.js"></script>
     <link rel="modulepreload" href="/assets/vendor.3e9f1f8c.js">
-    <link rel="stylesheet" href="/assets/index.3f4216e3.css">
+    <link rel="stylesheet" href="/assets/index.0aea4ad8.css">
   </head>
   <body>
     <div id="app"></div>
